# procedural_images

./: .gitignore  Makefile  README.md  SWshading  SWshading.c  fragmentshader.glsl
aqsis_renderman/: apple.sl  simple.rib
lab3/code/: CMakeLists.txt  GLSLprimer.cpp  fragmentshader.glsl  pollRotator.cpp  tgaloader.h  tnm084.cpp  tnm084.h  triangleSoup.cpp  vertexshader.glsl
lab3/notes/: kommentarer.txt
projekt/report/: tnm084_report.tex
projekt/src/: CMakeLists.txt  cam.cpp  cam.h  fbo.cpp  fbo.h  loadobj.cpp  loadobj.h  main.cpp  model.cpp  model.h  shadermanager.cpp  shadermanager.h  terrain.cpp  terrain.h  utils.h
projekt/src/shaders/: mainshader.frag  mainshader.vert  tessellation.frag  tessellation.tcs  tessellation.tes  tessellation.vert  textureToScreen.frag  textureToScreen.vert
